# cpp-template-minim-conan

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  NOTES.md  README.md  conanfile.py
cmake/: conan-preconfigure.cmake  setup-windows.cmake
scripts/: setup-windows.ps1
